--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3370,7 +3370,7 @@ en:
         hot: "There are no hot topics."
         filter: "There are no topics."
         education:
-          topic_tracking_preferences: "You can view and change your new topic tracking settings in <a href=\"%{basePath}/my/preferences/tracking\">your preferences</a>."
+          topic_tracking_preferences: 'You can view and change your new topic tracking settings in <a href="%{basePath}/my/preferences/tracking">your preferences</a>.'
           unread: "Nothing left unread...impressive!"
           new_new: "Nothing new at the moment...check back soon!"
           new: "Nothing new at the moment...check back soon!"
@@ -4582,6 +4582,22 @@ en:
         title: "Filtered results for %{filter}"
         button:
           label: "Filter"
+          advanced: "Advanced filters"
+      advanced_filter:
+        title: "Advanced Topic Filters"
+        apply: "Apply"
+        categories: "Categories"
+        tags: "Tags"
+        status:
+          label: "Status"
+          open: "Open"
+          closed: "Closed"
+        posts:
+          min: "Min Posts"
+          max: "Max Posts"
+        views:
+          min: "Min Views"
+          max: "Max Views"
       latest:
         title: "Latest"
         title_with_count:
