FEATURE: add advanced topic filter modal

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -8252,3 +8252,19 @@ en:
           replies: "Replies"
           views: "Views"
           activity: "Activity"
+      filters_modal:
+        title: "Filter topics"
+        category: "Category"
+        tags: "Tags"
+        status: "Status"
+        created_after: "Created after"
+        created_before: "Created before"
+        apply: "Apply filters"
+        statuses:
+          open: "Open"
+          closed: "Closed"
+          archived: "Archived"
+          listed: "Listed"
+          unlisted: "Unlisted"
+          deleted: "Deleted"
+          public: "Public"
